[gd_scene load_steps=15 format=3 uid="uid://bos8ss8x8l7og"]

[ext_resource type="Script" uid="uid://3qkryl4sejod" path="res://Scripts/dialogueManager.gd" id="1_b43uq"]
[ext_resource type="Shader" uid="uid://c2kixvp8ls0q7" path="res://Resources/Shaders/wigglewavy.gdshader" id="2_ea7an"]
[ext_resource type="Shader" uid="uid://bp7t12p2tmln8" path="res://Resources/Shaders/wavy.gdshader" id="3_kbs7n"]
[ext_resource type="FontFile" uid="uid://d37gk6icy7y45" path="res://Fonts/VCR_OSD_MONO_1.001.ttf" id="4_pceyl"]
[ext_resource type="FontFile" uid="uid://o30a3wtnmnd6" path="res://Resources/UAV-OSD-Mono.ttf" id="6_xeeeg"]
[ext_resource type="AudioStream" uid="uid://bwmmara6fxk1j" path="res://Audio/sfx/Tick.wav" id="12_cqag5"]
[ext_resource type="Texture2D" uid="uid://b8qxi8stcmydv" path="res://Sprites/Misc/dialogArrow.png" id="13_ij6ny"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a4kcp"]
shader = ExtResource("3_kbs7n")
shader_parameter/height = 0.5
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ee30a"]
atlas = ExtResource("13_ij6ny")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucsnm"]
atlas = ExtResource("13_ij6ny")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pra1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee30a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucsnm")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_016ig"]
shader = ExtResource("2_ea7an")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="Theme" id="Theme_od035"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 0
Label/font_sizes/font_size = 28
Label/fonts/font = ExtResource("4_pceyl")
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_outline_color = Color(1, 1, 1, 1)
RichTextLabel/font_sizes/bold_font_size = 28
RichTextLabel/font_sizes/normal_font_size = 28
RichTextLabel/fonts/bold_font = ExtResource("6_xeeeg")
RichTextLabel/fonts/normal_font = ExtResource("4_pceyl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5pwf2"]
shader = ExtResource("3_kbs7n")
shader_parameter/height = 1.2
shader_parameter/frequency = 0.4
shader_parameter/speed = 1.5

[node name="DialogueManager" type="Node"]
script = ExtResource("1_b43uq")

[node name="textSpeed" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="textSkipDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="dialogueSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_cqag5")
volume_db = -8.896
max_polyphony = 8

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="progress" type="AnimatedSprite2D" parent="CanvasLayer"]
visible = false
modulate = Color(0, 0, 0, 0.2)
z_index = 1
z_as_relative = false
material = SubResource("ShaderMaterial_a4kcp")
position = Vector2(1422, 278)
scale = Vector2(2.4, 2.4)
sprite_frames = SubResource("SpriteFrames_pra1p")
autoplay = "default"

[node name="dialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
top_level = true
texture_filter = 1
material = SubResource("ShaderMaterial_016ig")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -537.0
offset_top = 154.0
offset_right = 537.0
offset_bottom = 330.0
grow_horizontal = 2
color = Color(0.372549, 0.372549, 0.372549, 0.490196)

[node name="text" type="RichTextLabel" parent="CanvasLayer/dialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.0
offset_top = -30.0
offset_right = 507.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_od035")
bbcode_enabled = true
text = "[fade start=30]Hey, [wave]you[/wave] aren't from [rainbow]around[/rainbow] here, are [b]you?[/b][/fade]"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false

[node name="portrait" type="Sprite2D" parent="CanvasLayer/dialogBox"]
material = SubResource("ShaderMaterial_5pwf2")
position = Vector2(74, 70)
scale = Vector2(7.84375, 7.84375)
